...
                                        <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="20"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="tldr_" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="IoI-Iv-fQc">
                                        <rect key="frame" x="94" y="0.0" width="241" height="70"/>
                                        <accessibility key="accessibilityConfiguration" hint="Place to write command" identifier="input" label="inputTextView">
                                            <accessibilityTraits key="traits" staticText="YES"/>
                                        </accessibility>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="ga6-kn-K1i"/>
                                            <constraint firstAttribute="height" constant="70" id="sNA-QA-TeA"/>
                                        </constraints>
...
                                                <exclude reference="ga6-kn-K1i"/>
                                            </mask>
                                        </variation>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Imw-0t-8vq">
                                        <rect key="frame" x="338" y="19" width="32" height="32"/>
                                        <accessibility key="accessibilityConfiguration" label="infoButton"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="32" id="VUo-aI-Q5W"/>
                                            <constraint firstAttribute="height" constant="32" id="qtl-Cz-1cn"/>
                                        </constraints>
                                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <connections>
...
                                <rect key="frame" x="307" y="615" width="52" height="52"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="52" id="euT-PX-UiS"/>
                                    <constraint firstAttribute="width" constant="52" id="kDb-OD-qG0"/>
                                </constraints>
                                <inset key="contentEdgeInsets" minX="19" minY="14" maxX="0.0" maxY="15"/>
                                <state key="normal" image="clearButton"/>
                                <connections>
                                    <action selector="clearConsole:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mGA-bd-J38"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6jE-ng-DNa" userLabel="randomButton">
                                <rect key="frame" x="0.0" y="615" width="52" height="52"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="52" id="1ke-sh-SNG"/>
                                    <constraint firstAttribute="width" constant="52" id="6Eg-ct-0q7"/>
                                </constraints>
                                <inset key="contentEdgeInsets" minX="10" minY="10" maxX="10" maxY="10"/>
...
